Music + easier styling

--- a/projetos/mundo-dos-palitos.html
+++ b/projetos/mundo-dos-palitos.html
@@ -22,7 +22,7 @@
 
     <title>Fupi &#183; Mundo dos Palitos</title>
   </head>
-  <body style='background-color: #dfdfdf'>
+  <body>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
     
     <header></header>
@@ -33,21 +33,38 @@
 
     <section class='browser-game'>
       <div class="container">
+
+        <style>
+          body {
+            background-color: #dfdfdf;
+          }
+          .proj-header h1 {
+            color: #000;
+          }
+          .grid-item {
+            background-color: #b3b3b3;
+            color: #000;
+          }
+          .grid-item a {
+            color: #c11919;
+          }
+        </style>
+
         <div class="grid">
-        <div class="grid-item" style="color: #000; background-color: #b3b3b3;">
+          <div class="grid-item">
             <div class="info">
               <h1>Sobre</h1>
-              <p>Mundos dos Palitos (ou Mundo de Palitos) é uma série animada feita no Scratch, criada por <a href="https://scratch.mit.edu/users/The_Maujoa/" style='color: #000;'>Maujoa</a>.</p>
-              <p>Cada episódio é animado por um dos contribuidores: Maujoa, <a href="https://scratch.mit.edu/users/davekal/" style='color: #000;'>Dave</a>, <a href="https://scratch.mit.edu/users/fupicat/" style='color: #000;'>Fupi (eu)</a>, e <a href="https://scratch.mit.edu/users/leolegal/" style='color: #000;'>Leo.</a></p>
+              <p>Mundos dos Palitos (ou Mundo de Palitos) é uma série animada feita no Scratch, criada por <a href="https://scratch.mit.edu/users/The_Maujoa/">Maujoa</a>.</p>
+              <p>Cada episódio é animado por um dos contribuidores: Maujoa, <a href="https://scratch.mit.edu/users/davekal/">Dave</a>, <a href="https://scratch.mit.edu/users/fupicat/">Fupi (eu)</a>, e <a href="https://scratch.mit.edu/users/leolegal/">Leo.</a></p>
               <h1>Sinopse</h1>
               <p>Um portal estranho de repente surgiu na terra e começou a sugar tudo o que existe.</br>Das pessoas sugadas, (atualmente) quatro personagens se reúnem nesta dimensão para se aventurar e</br>escapar desse mundo estranho, mas lógico que no meio do caminho irão se deparar com estranhos...</p>
             </div>
           </div>
-          <div class="grid-item" style="color: #000; background-color: #b3b3b3;">
+          <div class="grid-item">
             <div class="info">
               <h1>Links</h1>
-              <p><a href="https://scratch.mit.edu/studios/25549052/" style='color: #000;'>Estúdio do Scratch</a></p>
-              <p><a href="https://scratch.mit.edu/studios/25835179/" style='color: #000;'>Estúdio da Primeira Temporada</br>(alguns episódios foram perdidos)</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25549052/">Estúdio do Scratch</a></p>
+              <p><a href="https://scratch.mit.edu/studios/25835179/">Estúdio da Primeira Temporada</br>(alguns episódios foram perdidos)</a></p>
             </div>
           </div>
         </div>
