--- a/projetos.html
+++ b/projetos.html
@@ -182,6 +182,78 @@
       </div>
     </section>
 
+    <section class='projects-section' id='music'>
+      <div class="container">
+        <div class="projects-header">
+          <img src="img/Música.png" alt="Música">
+          <h1>Músicas</h1>
+        </div>
+        <div class="grid" style='grid-template-columns: auto auto auto;'>
+
+          <a href="projetos/elevar.html">
+            <div class="grid-item">
+              <img src="img/Projetos/Elevar.png" alt="Elevar">
+              <div class="info">
+                <h1>Elevar</h1>
+                <p>Uma musiquinha animada.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="projetos/vaata.html">
+            <div class="grid-item">
+              <img src="img/Projetos/Vaata.png" alt="Vaata">
+              <div class="info">
+                <h1>Vaata</h1>
+                <p>Uma musiquinha tranquila.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="projetos/sz-evil.html">
+            <div class="grid-item">
+              <img src="img/Projetos/SZ Evil.png" alt="SZ Evil">
+              <div class="info">
+                <h1>SZ Evil</h1>
+                <p>Uma musiquinha sinistra.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="projetos/spinning.html">
+            <div class="grid-item">
+              <img src="img/Projetos/Spinning.png" alt="Spinning">
+              <div class="info">
+                <h1>Spinning</h1>
+                <p>Uma musiquinha confusa.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="projetos/space-bass-2018.html">
+            <div class="grid-item">
+              <img src="img/Projetos/SpaceBass2018.png" alt="Space Bass 2018">
+              <div class="info">
+                <h1>Space Bass 2018</h1>
+                <p>Uma musiquinha pesada.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="projetos/space-bass.html">
+            <div class="grid-item">
+              <img src="img/Projetos/SpaceBass.png" alt="Space Bass" style='image-rendering: crisp-edges;'>
+              <div class="info">
+                <h1>Space Bass</h1>
+                <p>Uma musiquinha menos pesada.</p>
+              </div>
+            </div>
+          </a>
+
+        </div>
+      </div>
+    </section>
+
     <section class='projects-section' id='art'>
       <div class="container">
         <div class="projects-header">
