--- a/footer.html
+++ b/footer.html
@@ -7,5 +7,8 @@
     <a href="https://youtube.com/c/fupicat">YouTube</a> &#183;
     <a href="https://opengameart.org/users/fupi">OpenGameArt</a>
   </p>
-  <p><a href="/email.html">Quer receber emails das minhas coisas?</a></p>
+  <p><a href='#' onclick='changetheme()'></a><a href="/email.html">Quer receber emails das minhas coisas?</a></p>
 </div>
+
+<script src="/js/js.cookie.min.js"></script>
+<script src="/js/temas.js"></script>
