--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="grid">
 
           <a href="projetos/sz.html">
-            <div class='grid-item' style='background: url(img/Fundos/Estrelas.png); background-size: 100%; color: #fff;'>
+            <div class='grid-item'>
               <img src="img/Projetos/SZ.png" alt="Logo do SZ">
               <div class="info">
                 <h1>SZ</h1>
@@ -74,7 +74,7 @@
             </div>
           </a>
           <a href="projetos/scratch-cat-3d.html">
-            <div class='grid-item' style='background: #a0b1e1; color: #000;'>
+            <div class='grid-item'>
               <img src="img/Projetos/ScratchCat3D.png" alt="Scratch Cat 3D">
               <div class="info">
                 <h1>Modelo 3D do Scratch Cat</h1>
@@ -83,7 +83,7 @@
             </div>
           </a>
           <a href="projetos/mundo-dos-palitos.html">
-            <div class='grid-item' style="background: #555; color: #fff;">
+            <div class='grid-item'>
               <img src="img/Projetos/Fupalito.svg" alt="Fupicat Palito">
               <div class="info">
                 <h1>Mundo dos Palitos</h1>
@@ -92,7 +92,7 @@
             </div>
           </a>
           <a href="projetos/crie-sua-danca.html">
-            <div class='grid-item' style="background: #000; color: #fff;">
+            <div class='grid-item'>
               <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
               <div class="info">
                 <h1>Crie sua Dança</h1>
