--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script>
     let page = window.location.href.replace(window.location.protocol, '').replace('/\/', '');
     if (!page.endsWith('index.html')) {
-      window.location.assign('fupicat.github.io/index.html')
+      window.location.href = 'https://fupicat.github.io/index.html';
     }
   </script>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
