Better homepage and grid system

--- a/projetos.html
+++ b/projetos.html
@@ -34,7 +34,7 @@
           <img src="img/Jogos.png" alt="Jogos">
           <h1>Jogos</h1>
         </div>
-        <div class="grid" style='grid-template-columns: auto auto auto;'>
+        <div class="grid">
 
           <a href="projetos/god-complex.html">
             <div class="grid-item">
@@ -146,7 +146,7 @@
           <img src="img/Animações.png" alt="Animações">
           <h1>Animações</h1>
         </div>
-        <div class="grid" style='grid-template-columns: auto auto;'>
+        <div class="grid">
 
           <a href="projetos/scratchventura-traduzido.html">
             <div class="grid-item">
@@ -188,7 +188,7 @@
           <img src="img/Música.png" alt="Música">
           <h1>Músicas</h1>
         </div>
-        <div class="grid" style='grid-template-columns: auto auto auto;'>
+        <div class="grid">
 
           <a href="projetos/elevar.html">
             <div class="grid-item">
@@ -260,7 +260,7 @@
           <img src="img/Arte.png" alt="Arte">
           <h1>Arte</h1>
         </div>
-        <div class="grid" style='grid-template-columns: auto;'>
+        <div class="grid">
 
           <a href="projetos/scratch-cat-3d.html">
             <div class="grid-item">
@@ -282,7 +282,7 @@
           <img src="img/Utilidades.png" alt="Utilidades">
           <h1>Utilidades</h1>
         </div>
-        <div class="grid" style='grid-template-columns: auto;'>
+        <div class="grid">
 
           <a href="https://fupicat.github.io/replacer">
             <div class="grid-item">
@@ -303,7 +303,7 @@
         <div class="projects-header">
           <h1>Não Terminados</h1>
         </div>
-        <div class="grid" style='grid-template-columns: auto auto;'>
+        <div class="grid">
 
           <a href="projetos/sz.html">
             <div class="grid-item">
