--- a/sobre.html
+++ b/sobre.html
@@ -38,10 +38,10 @@
 
         <h1>Sobre</h1>
         <img class="img-right" src="img/Eu.png" alt="Eu" title="oi" style="width: 15em;">
-        <p>Olá, <span onclick='addsom(this)'>e</span>u sou o Fupi. Eu faço <i>coisas</i> <span onclick='addsom(this)'>n</span>a <span onclick='addsom(this)'>i</span>nternet desde 2013, e este site vai servir para eu mostrá-las. Você encontrará vários tipos de <i>coisas</i> aqui, como por exemplo:</p>
+        <p>Olá, eu sou o Fupi. Eu faço <i>coisas</i> na internet desde 2013, e este site vai servir para eu mostrá-las. Você encontrará vários tipos de <i>coisas</i> aqui, como por exemplo:</p>
         <ul>
-          <li>Jo<span onclick='addsom(this)'>g</span>os</li>
-          <li>Ani<span onclick='addsom(this)'>m</span><span onclick='addsom(this)'>a</span>ções</li>
+          <li>Jogos</li>
+          <li>Animações</li>
           <li>Músicas</li>
           <li>Projetos não terminados</li>
           <li>Tutoriais</li>
@@ -89,7 +89,6 @@
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 			  crossorigin="anonymous"></script>
     <script src="/autoload.js"></script>
-    <!--<script src="js/sobre.js"></script>!-->
 
   </body>
 </html>
