--- a/autoload/navbar.html
+++ b/autoload/navbar.html
@@ -1,5 +1,5 @@
 <div class='container'>
-    <a href="/home.html"><img src="/img/LogoSmall.png" alt="Fupi" onmouseover="this.src='/img/Logo.png'" onmouseout="this.src='/img/LogoSmall.png'"></a>
+    <a href="/index.html"><img src="/img/LogoSmall.png" alt="Fupi" onmouseover="this.src='/img/Logo.png'" onmouseout="this.src='/img/LogoSmall.png'"></a>
     <nav>
         <a href="/sobre.html">Sobre</a>
         <a href="/projetos.html">Projetos</a>
