--- a/projetos/mundo-dos-palitos.html
+++ b/projetos/mundo-dos-palitos.html
@@ -71,7 +71,7 @@
 
         <h1>Episódios</h1>
 
-        <div class="grid series-grid" style='grid-template-columns: auto auto;' id='MDPgrid'>
+        <div class="grid series-grid" id='MDPgrid'>
 
           <a href="https://scratch.mit.edu/projects/353414298/embed">
             <div class="grid-item">
