--- a/autoload/footer.html
+++ b/autoload/footer.html
@@ -4,7 +4,7 @@
     <a href="https://fupi.itch.io">Itch</a> &#183;
     <a href="https://github.com/Fupicat">GitHub</a> &#183;
     <a href="https://twitter.com/Fupicat_BR">Twitter</a> &#183;
-    <a href="https://youtube.com/c/fupicat">YouTube</a> &#183;
+    <a href="https://youtube.com/c/fupii">YouTube</a> &#183;
     <a href="https://opengameart.org/users/fupi">OpenGameArt</a>
   </p>
   <p><a id='themebtn' href='#themebtn' onclick='changetheme()'>Tema: Padrão</a> &#183; <a href="/email.html">Quer receber emails das minhas coisas?</a></p>
