Mais projetos + organização

--- a/projetos.html
+++ b/projetos.html
@@ -36,106 +36,6 @@
         </div>
         <div class="grid">
 
-          <a href="projetos/god-complex.html">
-            <div class="grid-item">
-              <img src="img/Projetos/God Complex.png" alt="God Complex">
-              <div class="info">
-                <h1>God Complex</h1>
-                <p>Jogo idle onde você cria e destrói um universo.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/nowhere-but-forward.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Nowhere but Forward.png" alt="Nowhere but Forward">
-              <div class="info">
-                <h1>Nowhere but Forward</h1>
-                <p>Jogo de plataforma que usa apenas um botão.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/blind-boom.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Blind Boom.png" alt="Blind Boom">
-              <div class="info">
-                <h1>Blind Boom</h1>
-                <p>Jogo sem gráficos que usa apenas sons.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/color-maze.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Color Maze.png" alt="Color Maze">
-              <div class="info">
-                <h1>Color Maze</h1>
-                <p>Jogo de um nível só onde você tem que usar a cor certa.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/turn-on-the-tv.html">
-            <div class="grid-item">
-              <img src="img/Projetos/TV.png" alt="Turn on the TV">
-              <div class="info">
-                <h1>Turn on the TV</h1>
-                <p>Ligue a TV e veja o que acontece.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/convulsao-simulator.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Convulsão.svg" alt="Convulsão Simulator">
-              <div class="info">
-                <h1>Convulsão Simulator</h1>
-                <p>Aperte freneticamente a tecla K.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/crie-sua-danca.html">
-            <div class="grid-item">
-              <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
-              <div class="info">
-                <h1>Crie sua Dança</h1>
-                <p>Cria dancinhas escrotas.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/beu-mais-facil.html">
-            <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/345792658_1440x1080.png" alt="O Beat 'em Up mais fácil da história">
-              <div class="info">
-                <h1>O Beat 'em Up mais fácil da história</h1>
-                <p>Bata em carinhas até eles ganhar, porque não tem outra opção.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/pimjff.html">
-            <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/227100617_1440x1080.png" alt="PIMJFF">
-              <div class="info">
-                <h1>PIMJFF</h1>
-                <p>Um jogo de plataforma onde você atravessa paredes.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/sz-super.html">
-            <div class="grid-item">
-              <img src="img/Projetos/SZ Super.svg" alt="SZ Super">
-              <div class="info">
-                <h1>SZ Super</h1>
-                <p>O antecessor de SZ, um mundo virtual intergalático.</p>
-              </div>
-            </div>
-          </a>
-
         </div>
       </div>
     </section>
@@ -147,36 +47,6 @@
           <h1>Animações</h1>
         </div>
         <div class="grid">
-
-          <a href="projetos/scratchventura-traduzido.html">
-            <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/278957849_1440x1080.png" alt="Scratchventura Traduzido">
-              <div class="info">
-                <h1>Scratchventura Traduzido</h1>
-                <p>Animação antiga que eu fiz, mas todas as falas são passadas no Google Tradutor 10 vezes.</p>
-              </div>
-            </div>
-          </a>
-          
-          <a href="projetos/vida-de-pengoen.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Pengoen.svg" alt="Vida de Pengoen">
-              <div class="info">
-                <h1>Vida de Pengoen</h1>
-                <p>Um loop infinito da vida mais interessante de todas.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/coisas-do-scratch.html">
-            <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/154342532_1440x1080.png" alt="Coisas do Scratch">
-              <div class="info">
-                <h1>Coisas do Scratch</h1>
-                <p>O show só para Scratchers.</p>
-              </div>
-            </div>
-          </a>
 
         </div>
       </div>
@@ -190,66 +60,6 @@
         </div>
         <div class="grid">
 
-          <a href="projetos/elevar.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Elevar.png" alt="Elevar">
-              <div class="info">
-                <h1>Elevar</h1>
-                <p>Uma musiquinha animada.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/vaata.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Vaata.png" alt="Vaata">
-              <div class="info">
-                <h1>Vaata</h1>
-                <p>Uma musiquinha tranquila.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/sz-evil.html">
-            <div class="grid-item">
-              <img src="img/Projetos/SZ Evil.png" alt="SZ Evil">
-              <div class="info">
-                <h1>SZ Evil</h1>
-                <p>Uma musiquinha sinistra.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/spinning.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Spinning.png" alt="Spinning">
-              <div class="info">
-                <h1>Spinning</h1>
-                <p>Uma musiquinha confusa.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/space-bass-2018.html">
-            <div class="grid-item">
-              <img src="img/Projetos/SpaceBass2018.png" alt="Space Bass 2018">
-              <div class="info">
-                <h1>Space Bass 2018</h1>
-                <p>Uma musiquinha pesada.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/space-bass.html">
-            <div class="grid-item">
-              <img src="img/Projetos/SpaceBass.png" alt="Space Bass" style='image-rendering: crisp-edges;'>
-              <div class="info">
-                <h1>Space Bass</h1>
-                <p>Uma musiquinha menos pesada.</p>
-              </div>
-            </div>
-          </a>
-
         </div>
       </div>
     </section>
@@ -261,16 +71,6 @@
           <h1>Arte</h1>
         </div>
         <div class="grid">
-
-          <a href="projetos/scratch-cat-3d.html">
-            <div class="grid-item">
-              <img src="img/Projetos/ScratchCat3D.png" alt="Modelo 3D do Scratch Cat">
-              <div class="info">
-                <h1>Modelo 3D do Scratch Cat</h1>
-                <p>Um modelo 3D do mascote do Scratch.</p>
-              </div>
-            </div>
-          </a>
 
         </div>
       </div>
@@ -284,16 +84,6 @@
         </div>
         <div class="grid">
 
-          <a href="https://fupicat.github.io/replacer">
-            <div class="grid-item">
-              <img src="img/Projetos/Replacer.png" alt="Replacer">
-              <div class="info">
-                <h1>Replacer</h1>
-                <p>Editor de texto automático. Você pode criar regras para trocar fragmentos de texto por outros.</p>
-              </div>
-            </div>
-          </a>
-
         </div>
       </div>
     </section>
@@ -304,26 +94,6 @@
           <h1>Não Terminados</h1>
         </div>
         <div class="grid">
-
-          <a href="projetos/sz.html">
-            <div class="grid-item">
-              <img src="img/Projetos/SZ.png" alt="SZ">
-              <div class="info">
-                <h1>SZ</h1>
-                <p>Um simulador de vida ainda em desenvolvimento.</p>
-              </div>
-            </div>
-          </a>
-
-          <a href="projetos/mundo-dos-palitos.html">
-            <div class="grid-item">
-              <img src="img/Projetos/Fupalito.svg" alt="Mundo dos Palitos">
-              <div class="info">
-                <h1>Mundo dos Palitos</h1>
-                <p>Série de animação onde viramos stickmen!</p>
-              </div>
-            </div>
-          </a>
 
         </div>
       </div>
@@ -337,18 +107,229 @@
 			  crossorigin="anonymous"></script>
     <script src="/autoload.js"></script>
     <script>
-      var origHeight = []; //Lista de tamanhos originais das seções em px.
+
+      let projects = {
+        'jogos': [
+          {
+            name: 'God Complex',
+            url: 'god-complex',
+            img: 'img/Projetos/God Complex.png',
+            desc: 'Jogo idle onde você cria e destrói um universo.'
+          },
+          {
+            name: 'Nowhere but Forward',
+            url: 'nowhere-but-forward',
+            img: 'img/Projetos/Nowhere but Forward.png',
+            desc: 'Jogo de plataforma que usa apenas um botão.'
+          },
+          {
+            name: 'Blind Boom',
+            url: 'blind-boom',
+            img: 'img/Projetos/Blind Boom.png',
+            desc: 'Jogo onde você tenta desativar uma bomba sem vê-la.'
+          },
+          {
+            name: 'Color Maze',
+            url: 'color-maze',
+            img: 'img/Projetos/Color Maze.png',
+            desc: 'Jogo de um nível só onde você tem que usar a cor certa.'
+          },
+          {
+            name: 'Turn on the TV',
+            url: 'turn-on-the-tv',
+            img: 'img/Projetos/TV.png',
+            desc: 'Ligue a TV e veja o que acontece.'
+          },
+          {
+            name: 'Convulsão Simulator',
+            url: 'convulsao-simulator',
+            img: 'img/Projetos/Convulsão.svg',
+            desc: 'Aperte freneticamente a tecla K.'
+          },
+          {
+            name: 'Crie sua Dança',
+            url: 'crie-sua-danca',
+            img: 'img/Projetos/crie sua dança.png',
+            desc: 'Crie dancinhas escrotas.'
+          },
+          {
+            name: 'O Beat \'em Up mais fácil da história',
+            url: 'beu-mais-facil',
+            img: 'https://cdn2.scratch.mit.edu/get_image/project/345792658_1440x1080.png',
+            desc: 'Bata em carinhas até ganhar, porque não tem outra opção.'
+          },
+          {
+            name: 'PIMJFF',
+            url: 'pimjff',
+            img: 'https://cdn2.scratch.mit.edu/get_image/project/227100617_1440x1080.png',
+            desc: 'Um jogo de plataforma onde você atravessa paredes.'
+          },
+          {
+            name: 'SZ Super',
+            url: 'sz-super',
+            img: 'img/Projetos/SZ Super.svg',
+            desc: 'Um pequeno mundo virtual espacial.'
+          },
+          {
+            name: 'Tiro e Plataforma',
+            url: 'tiro-e-plataforma',
+            img: 'https://cdn2.scratch.mit.edu/get_image/project/156312915_1440x1080.png',
+            desc: 'Um teste de clone de Megaman com um nível só.'
+          },
+        ],
+        'anim': [
+          {
+            name: 'Scratchventura Traduzido',
+            url: 'scratchventura-traduzido',
+            img: 'https://cdn2.scratch.mit.edu/get_image/project/278957849_1440x1080.png',
+            desc: 'Animação antiga que eu fiz, mas todas as falas são passadas no Google Tradutor 10 vezes.'
+          },
+          {
+            name: 'Vida de Pengoen',
+            url: 'vida-de-pengoen',
+            img: 'img/Projetos/Pengoen.svg',
+            desc: 'Um loop infinito da vida mais interessante de todas.'
+          },
+          {
+            name: 'Novo SCDM',
+            url: 'novo-scdm',
+            img: 'https://cdn2.scratch.mit.edu/get_image/project/154924266_1440x1080.png',
+            desc: 'Muita malvadagem.'
+          },
+          {
+            name: 'Coisas do Scratch',
+            url: 'coisas-do-scratch',
+            img: 'https://cdn2.scratch.mit.edu/get_image/project/154342532_1440x1080.png',
+            desc: 'O show só para Scratchers.'
+          },
+        ],
+        'music': [
+          {
+            name: 'Elevar',
+            url: 'elevar',
+            img: 'img/Projetos/Elevar.png',
+            desc: 'Uma musiquinha animada.'
+          },
+          {
+            name: 'Vaata',
+            url: 'vaata',
+            img: 'img/Projetos/Vaata.png',
+            desc: 'Uma musiquinha tranquila.'
+          },
+          {
+            name: 'SZ Evil',
+            url: 'sz-evil',
+            img: 'img/Projetos/SZ Evil.png',
+            desc: 'Uma musiquinha du mau.'
+          },
+          {
+            name: 'Spinning',
+            url: 'spinning',
+            img: 'img/Projetos/Spinning.png',
+            desc: 'Uma musiquinha confusa.'
+          },
+          {
+            name: 'Space Bass 2018',
+            url: 'space-bass-2018',
+            img: 'img/Projetos/SpaceBass2018.png',
+            desc: 'Uma musiquinha pesada.'
+          },
+          {
+            name: 'Space Bass',
+            url: 'space-bass',
+            img: 'img/Projetos/SpaceBass.png',
+            desc: 'Uma musiquinha menos pesada.'
+          },
+        ],
+        'art': [
+          {
+            name: 'Modelo 3D do Scratch Cat',
+            url: 'scratch-cat-3d',
+            img: 'img/Projetos/ScratchCat3D.png',
+            desc: 'Um modelo 3D do mascote do Scratch.'
+          },
+        ],
+        'apps': [
+          {
+            name: 'Replacer',
+            url: 'https://fupicat.github.io/replacer',
+            img: 'img/Projetos/Replacer.png',
+            desc: 'Editor de texto automático. Você pode criar regras para trocar fragmentos de texto por outros.'
+          },
+          {
+            name: 'Scratch Upload',
+            url: 'https://fupicat.github.io/ScratchUpload',
+            img: 'https://en.scratch-wiki.info/w/images/Forum_Smiley_-_Mad.png',
+            desc: 'Um host de imagens para o fórum do Scratch e outros que usam BBcode, sem propagandas nem login.'
+          },
+        ],
+        'unfinished': [
+          {
+            name: 'SZ',
+            url: 'sz',
+            img: 'img/Projetos/SZ.png',
+            desc: 'Um simulador de vida ainda em desenvolvimento.'
+          },
+          {
+            name: 'Mundo dos Palitos',
+            url: 'mundo-dos-palitos',
+            img: 'img/Projetos/Fupalito.svg',
+            desc: 'Série de animação onde viramos stickmen!'
+          }
+        ]
+      }
+
+      for (let i = 0; i < Object.keys(projects).length; i++) {
+        const cat = Object.keys(projects)[i];
+
+        console.log(cat);
+
+        const grid = document.querySelector('#' + cat + ' .grid');
+
+        for (let q = 0; q < projects[cat].length; q++) {
+          const proj = projects[cat][q];
+
+          let a = document.createElement('a');
+          if (proj.url.startsWith('http')) {
+            a.href = proj.url;
+          } else {
+            a.href = 'projetos/' + proj.url + '.html';
+          }
+          let griditem = document.createElement('div');
+          griditem.className = 'grid-item';
+          let img = document.createElement('img');
+          img.src = proj.img;
+          img.alt = proj.name;
+          let info = document.createElement('div');
+          info.className = 'info';
+          let title = document.createElement('h1');
+          title.textContent = proj.name;
+          let desc = document.createElement('p');
+          desc.textContent = proj.desc;
+
+          info.appendChild(title);
+          info.appendChild(desc);
+          griditem.appendChild(img);
+          griditem.appendChild(info);
+          a.appendChild(griditem);
+          grid.appendChild(a);
+
+        }
+        
+      }
+
+      let origHeight = []; //Lista de tamanhos originais das seções em px.
 
       $('.projects-section').each(function() { //Para cada seção de projetos...
         origHeight.push($(this).find('.grid').height()); //Adicione o tamanho da grade à lista.
 
         $(this).find('.projects-header').click(function() { //Adicione esta função ao clicar na seção.
-          var toggle = $(this).parent().find('.grid');
+          let toggle = $(this).parent().find('.grid');
 
           if (toggle.css('display') == 'none') { //Se a grade estiver escondida...
             toggle.show(); //Mostre a grade.
 
-            var hundred = origHeight[$('.projects-section').index($(this).parent().parent())]; //Pegue o tamanho da lista.
+            let hundred = origHeight[$('.projects-section').index($(this).parent().parent())]; //Pegue o tamanho da lista.
             toggle.stop().animate({height:hundred}, 200, function() {
               toggle.css('height', '100%');
             }); //Anime o tamanho da grade até o valor da lista e então resete o tamanho para 100%.
