--- a/sobre.html
+++ b/sobre.html
@@ -61,12 +61,12 @@
             <li><a href="https://inkscape.org/">Inkscape</a> (para fazer gráficos em vetorial, por exemplo meu logo)</li>
             <li><a href="https://blender.org">Blender</a> (programa de modelagem 3D que eu uso pra fazer modelos 3D e edição de vídeo às vezes)</li>
             <li><a href="https://www.audacityteam.org/">Audacity</a> (editor de áudio que eu uso pra muitas <i>coisas</i>)</li>
-            <li><a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> (navegador que é bem útil na criação de sites, ele tem um inspetor de elemento muito completo e até guarda cookies)</li>
+            <li><a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> (navegador que é bem útil na criação de sites, ele tem um inspetor de elemento muito completo)</li>
             <li><a href="https://linuxmint.com/">Linux Mint Cinnamon</a> (OS que eu uso no meu PC)</li>
           </ul>
           <li><h3>Grátis</h3></li>
           <ul>
-            <li><a href="https://code.visualstudio.com/">Visual Studio Code</a> (editor de código que eu usei pra fazer esse site)</li>
+            <li><a href="https://code.visualstudio.com/">Visual Studio Code</a> (editor de código que eu usei pra fazer esse site, você pode hostear localmente o seu site pra ver as mudanças que você faz)</li>
             <li><a href="https://vivaldi.com/">Vivaldi</a> (navegador muito bom pra quem gosta de usar várias abas ao mesmo tempo, super customizável)</li>
           </ul>
           <li><h3>Pago</h3></li>
