--- a/projetos.html
+++ b/projetos.html
@@ -176,6 +176,12 @@
             img: 'https://cdn2.scratch.mit.edu/get_image/project/156312915_1440x1080.png',
             desc: 'Um teste de clone de Megaman com um nível só.'
           },
+          {
+            name: 'ScratcherZ',
+            url: 'scratcherz',
+            img: 'img/Projetos/ScratcherZ.svg',
+            desc: 'Uma série de jogos de mundo virtual.'
+          }
         ],
         'anim': [
           {
