Hearty Dose + homepage atualizada

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <h1>Coisas em Destaque</h1>
         <div class="grid">
 
-          <a href="projetos/sz.html">
+          <a href="projetos/hearty-dose.html">
             <div class='grid-item'>
-              <img src="img/Projetos/SZ.png" alt="Logo do SZ">
+              <img src="img/Projetos/Hearty Dose.png" alt="Hearty Dose">
               <div class="info">
-                <h1>SZ</h1>
-                <p>Meu projeto atual, em desenvolvimento.</p>
+                <h1>Hearty Dose</h1>
+                <p>Meu jogo para a Ludum Dare 46: Mantenha o coração vivo!</p>
               </div>
             </div>
           </a>
@@ -82,12 +82,12 @@
               </div>
             </div>
           </a>
-          <a href="projetos/mundo-dos-palitos.html">
+          <a href="https://fupicat.github.io/replacer/">
             <div class='grid-item'>
-              <img src="img/Projetos/Fupalito.svg" alt="Fupicat Palito">
+              <img src="img/Projetos/Replacer.png" alt="Replacer">
               <div class="info">
-                <h1>Mundo dos Palitos</h1>
-                <p>Uma série colaborativa no Scratch da qual estou participando! Fomos transportados a um mundo de stickmans.</p>
+                <h1>Replacer</h1>
+                <p>Formate texto automaticamente, troque fragmentos de texto por outros.</p>
               </div>
             </div>
           </a>
