--- a/projetos.html
+++ b/projetos.html
@@ -111,6 +111,12 @@
       let projects = {
         'jogos': [
           {
+            name: 'Hearty Dose',
+            url: 'hearty-dose',
+            img: 'img/Projetos/Hearty Dose.png',
+            desc: 'Proteja o coração dos invasores.'
+          },
+          {
             name: 'God Complex',
             url: 'god-complex',
             img: 'img/Projetos/God Complex.png',
