--- a/autoload/footer.html
+++ b/autoload/footer.html
@@ -3,7 +3,7 @@
     <a href="https://scratch.mit.edu/users/Fupicat/">Scratch</a> &#183;
     <a href="https://fupi.itch.io">Itch</a> &#183;
     <a href="https://github.com/Fupicat">GitHub</a> &#183;
-    <a href="https://twitter.com/Fupicat_BR">Twitter</a> &#183;
+    <a href="https://twitter.com/fupibr">Twitter</a> &#183;
     <a href="https://youtube.com/c/fupii">YouTube</a> &#183;
     <a href="https://opengameart.org/users/fupi">OpenGameArt</a>
   </p>
