2 projetos + Novos ícones

--- a/projetos.html
+++ b/projetos.html
@@ -149,7 +149,7 @@
           {
             name: 'Convulsão Simulator',
             url: 'convulsao-simulator',
-            img: 'img/Projetos/Convulsão.svg',
+            img: 'img/Projetos/Convulsão.png',
             desc: 'Aperte freneticamente a tecla K.'
           },
           {
@@ -161,57 +161,69 @@
           {
             name: 'O Beat \'em Up mais fácil da história',
             url: 'beu-mais-facil',
-            img: 'https://cdn2.scratch.mit.edu/get_image/project/345792658_1440x1080.png',
+            img: 'img/Projetos/BEU.png',
             desc: 'Bata em carinhas até ganhar, porque não tem outra opção.'
           },
           {
             name: 'PIMJFF',
             url: 'pimjff',
-            img: 'https://cdn2.scratch.mit.edu/get_image/project/227100617_1440x1080.png',
+            img: 'img/Projetos/PIMJFF.png',
             desc: 'Um jogo de plataforma onde você atravessa paredes.'
           },
           {
             name: 'SZ Super',
             url: 'sz-super',
-            img: 'img/Projetos/SZ Super.svg',
+            img: 'img/Projetos/SZ Super.png',
             desc: 'Um pequeno mundo virtual espacial.'
           },
           {
             name: 'Tiro e Plataforma',
             url: 'tiro-e-plataforma',
-            img: 'https://cdn2.scratch.mit.edu/get_image/project/156312915_1440x1080.png',
+            img: 'img/Projetos/TEPlat.png',
             desc: 'Um teste de clone de Megaman com um nível só.'
           },
           {
             name: 'ScratcherZ',
             url: 'scratcherz',
-            img: 'img/Projetos/ScratcherZ.svg',
+            img: 'img/Projetos/ScratcherZ.png',
             desc: 'Uma série de jogos de mundo virtual.'
-          }
+          },
+          {
+            name: 'Super Worm World',
+            url: 'super-worm-world',
+            img: 'img/Projetos/SWW.png',
+            desc: 'Controle a minhoca e coma comidas.'
+          },
+          {
+            name: 'Fupicat OS Mobile',
+            url: 'fupicat-os-mobile',
+            img: 'img/Projetos/FOSM.png',
+            desc: 'Simulador de OS bem simples.'
+          },
         ],
         'anim': [
           {
             name: 'Scratchventura Traduzido',
             url: 'scratchventura-traduzido',
-            img: 'https://cdn2.scratch.mit.edu/get_image/project/278957849_1440x1080.png',
+            img: 'img/Projetos/ScratchTrad.png',
             desc: 'Animação antiga que eu fiz, mas todas as falas são passadas no Google Tradutor 10 vezes.'
           },
           {
             name: 'Vida de Pengoen',
             url: 'vida-de-pengoen',
-            img: 'img/Projetos/Pengoen.svg',
+            img: 'img/Projetos/Pengoen.png',
             desc: 'Um loop infinito da vida mais interessante de todas.'
           },
           {
             name: 'Novo SCDM',
             url: 'novo-scdm',
-            img: 'https://cdn2.scratch.mit.edu/get_image/project/154924266_1440x1080.png',
+            img: 'img/Projetos/SCDM.png',
             desc: 'Muita malvadagem.'
           },
           {
             name: 'Coisas do Scratch',
             url: 'coisas-do-scratch',
-            img: 'https://cdn2.scratch.mit.edu/get_image/project/154342532_1440x1080.png',
+            img: 'img/Projetos/CoisasDoScratch.png',
             desc: 'O show só para Scratchers.'
           },
         ],
@@ -271,7 +283,7 @@
           {
             name: 'Scratch Upload',
             url: 'https://fupicat.github.io/ScratchUpload',
-            img: 'https://en.scratch-wiki.info/w/images/Forum_Smiley_-_Mad.png',
+            img: 'img/Projetos/ScratchUpload.png',
             desc: 'Um host de imagens para o fórum do Scratch e outros que usam BBcode, sem propagandas nem login.'
           },
         ],
@@ -285,7 +297,7 @@
           {
             name: 'Mundo dos Palitos',
             url: 'mundo-dos-palitos',
-            img: 'img/Projetos/Fupalito.svg',
+            img: 'img/Projetos/Fupalito.png',
             desc: 'Série de animação onde viramos stickmen!'
           }
         ]
