Hearty Dose 2 Curassaum

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
         <h1>Coisas em Destaque</h1>
         <div class="grid">
 
-          <a href="projetos/hearty-dose.html">
+          <a href="projetos/curassaum.html">
             <div class='grid-item'>
-              <img src="img/Projetos/Hearty Dose.png" alt="Hearty Dose">
+              <img src="img/Projetos/Hearty Dose.png" alt="Curassaum">
               <div class="info">
-                <h1>Hearty Dose</h1>
+                <h1>Curassaum</h1>
                 <p>Meu jogo para a Ludum Dare 46: Mantenha o coração vivo!</p>
               </div>
             </div>
