--- a/projetos.html
+++ b/projetos.html
@@ -111,8 +111,8 @@
       let projects = {
         'jogos': [
           {
-            name: 'Hearty Dose',
-            url: 'hearty-dose',
+            name: 'Curassaum',
+            url: 'curassaum',
             img: 'img/Projetos/Hearty Dose.png',
             desc: 'Proteja o coração dos invasores.'
           },
