--- a/projetos/curassaum.html
+++ b/projetos/curassaum.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Hearty Dose</title>
+    <title>Fupi &#183; Curassaum</title>
   </head>
   <body>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
@@ -29,7 +29,7 @@
 
     <section class="proj-header">
       <div class="container">
-        <h1>Hearty Dose</h1>
+        <h1>Curassaum</h1>
       </div>
     </section>
 
@@ -53,7 +53,6 @@
           }
         </style>
         
-        <p class="warning">Atenção: Jogo em inglês.</p>
         <div class="grid">
           <div class="grid-item">
             <div class="info">
